[gd_scene load_steps=12 format=3 uid="uid://ci3nbgy5i0f8h"]

[ext_resource type="Script" path="res://Scenes/rabbit.gd" id="1_87t44"]
[ext_resource type="Texture2D" uid="uid://bprrufhd88fir" path="res://Assets/Animals/MinifolksForestAnimals/Outline/MiniBunny.png" id="1_k6cj4"]
[ext_resource type="Script" path="res://Scenes/MiniBunny.gd" id="3_m1w17"]

[sub_resource type="Animation" id="Animation_2up4p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_i61si"]
resource_name = "idle"
length = 1.6
loop_mode = 1
step = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0)]
}

[sub_resource type="Animation" id="Animation_d1vuh"]
resource_name = "walking"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1)]
}

[sub_resource type="Animation" id="Animation_3iyfj"]
resource_name = "eat"
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pa4e4"]
_data = {
"RESET": SubResource("Animation_2up4p"),
"eat": SubResource("Animation_3iyfj"),
"idle": SubResource("Animation_i61si"),
"walking": SubResource("Animation_d1vuh")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_moxc6"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_teqon"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_68h3m"]
radius = 70.0

[node name="Rabbit" type="CharacterBody2D"]
scale = Vector2(2, 2)
collision_layer = 2
collision_mask = 14
script = ExtResource("1_87t44")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -12)
texture = ExtResource("1_k6cj4")
hframes = 4
vframes = 4
script = ExtResource("3_m1w17")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pa4e4")
}
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_moxc6")

[node name="CarrotDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CarrotDetector"]
shape = SubResource("CircleShape2D_teqon")

[node name="FoxDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="FoxDetector"]
shape = SubResource("CircleShape2D_68h3m")

[connection signal="body_entered" from="FoxDetector" to="." method="_on_fox_detector_body_entered"]
[connection signal="body_exited" from="FoxDetector" to="." method="_on_fox_detector_body_exited"]
